tests/integration/traits/errors/duplicate-impl-method/main.cx
trait C a {
  c: a
}

impl C Number {
  c = 1
  c = 2
}
